<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />

        <variable
            name="mView"
            type="com.practice.gadsaaleaderboard.ui.projectsubmission.ProjectContracts.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_project"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textAlignment="center"
            style="@style/ProjectTextAppearance"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <EditText
            android:id="@+id/first_name"
            android:padding="8dp"
            android:hint="@string/first_name"
            android:layout_width="0dp"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@drawable/shape_edit_text"
            app:layout_constraintEnd_toStartOf="@id/last_name"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/text"
            android:layout_marginEnd="8dp"
            android:nextFocusDown="@id/last_name"
            android:importantForAutofill="no" />

        <View
            android:id="@+id/lineView"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/project_submission_text_line"
            android:orientation="vertical"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/text"/>

        <EditText
            android:id="@+id/last_name"
            android:padding="8dp"
            android:hint="@string/last_name"
            android:inputType="text"
            android:nextFocusDown="@id/email_address"
            android:nextFocusUp="@id/first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@drawable/shape_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/text"
            app:layout_constraintStart_toEndOf="@id/first_name"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/email_address"
            android:padding="8dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/github_link"
            android:nextFocusUp="@id/last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edit_text"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/first_name"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/github_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@drawable/shape_edit_text"
            android:hint="@string/project_github_link"
            android:importantForAutofill="no"
            android:nextFocusUp="@id/email_address"
            android:inputType="textUri"
            android:padding="8dp"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/email_address" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginStart="95dp"
            android:layout_marginEnd="95dp"
            android:textAllCaps="false"
            android:enabled="false"
            android:onClick="@{ () -> mView.onClickProjectSubmit() }"
            android:background="@drawable/shape_submit_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/github_link" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
